tests/error/comptime/pointer_arithmetic04.bz
// error: invalid pointer arithmetic operation with type '*i32' and offset -1
// note: while evaluating expression at compile time
// note: address points to this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		&i - 1;
	});
}
